# sushy-tools

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  HACKING.rst  README.rst  bindep.txt  driver-requirements.txt  lower-constraints.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/source/admin/: emulator.conf  index.rst
doc/source/contributor/: index.rst
doc/source/install/: index.rst
doc/source/user/: dynamic-emulator.rst  index.rst  static-emulator.rst
playbooks/legacy/sushy-tools-tempest-dsvm-ironic-ipa-partition-redfish-src/: run.yaml
releasenotes/notes/: add-chassis-resource-aab57e319e6c7088.yaml  add-drive-resource-a827e136600071f3.yaml  add-http-boot-uri-handling-c678bd89c7f6346c.yaml  add-http-to-vmedia-ef04c156e66fc121.yaml  add-indicator-led-resource-672255319e6c3421.yaml  add-ironic-6f446bf16276b4dd.yaml  add-libvirt-firware-autoselect-b743737cb1cf9c5e.yaml  add-managers-resource-ffa58e329eccc058.yaml  add-processor-schema-f23195a923f5830f.yaml  add-redfish-datatime-patch-dd2b43ef06bc957c.yaml  add-simple-storage-resource-200e78d78c6aa8df.yaml  add-storage-resource-52bf30f50dd7b0a1.yaml  add-thermal-resource-8623543795643123.yaml  add-updateservice-3332a9c15b5fb3ab.yaml  add-virtual-media-4a137a5fb5017031.yaml  add-volume-collection-to-storage-template-b673a7acfbb1a03e.yaml  add-volume-resource-db795af928e41e5c.yaml  add_message_and_attribute_registries-71e14a53bfa658da.yaml  auth-044dab149ab0c03f.yaml  auth-config-4f05bbfaea15bd2b.yaml  auth-config-7705910e241909c1.yaml  bios-integer-types-79928fbd0b49ac57.yaml  certificate-service-ff8061143d454313.yaml  debug-mode-0dccdc3702c0590e.yaml  drop-python2-48e8388f96998244.yaml  expose-system-sub-resources-based-on-driver-support-57f467d2b5c62bc6.yaml  fakedriver-819d46b6f1e18081.yaml  feature-set-42f2846a17f59424.yaml  fix-bios-registry-handler-63528fb2e114a04c.yaml  fix-boot-mode-constant-71e6a7ec6b010273.yaml  fix-boot-mode-detect-e18e26f2ebb2a30d.yaml  fix-libvirt-boot-image-965d94fd30bca7b0.yaml  fix-libvirt-boot-mode-3ec2ccf49f96aec8.yaml  fix-libvirt-list-1ccf5a18bc89793d.yaml  fix-libvirt-statefulness-0a2a7812d79fdd25.yaml  fix-redirect-code-a0aa43251be7de0c.yaml  fix-retain-boot-device-5ae02731d2a000d3.yaml  fix-set-boot-mode-forbidden-085efb2aea6987ff.yaml  fix-storage-drive-defaults-3a925a0063738b77.yaml  fix-wsgi-config-e3f63f91152225f8.yaml  (+22 more)
releasenotes/source/: conf.py  index.rst
sushy_tools/: error.py
sushy_tools/emulator/: api_utils.py  auth_basic.py  base.py  constants.py  main.py  memoize.py
sushy_tools/emulator/clouds/: base.py  libvirtdriver.py
sushy_tools/emulator/controllers/: certificate_service.py  update_service.py  virtual_media.py
sushy_tools/emulator/drivers/: base.py  libvirtdriver.py  memoize.py  novadriver.py
sushy_tools/emulator/resources/: base.py  chassis.py  drives.py  indicators.py  managers.py  storage.py  vmedia.py  volumes.py
sushy_tools/emulator/templates/: bios.json  bios_attribute_registry_file.json  bios_registry.json  bios_settings.json  certificate.json  certificate_collection.json  certificate_locations.json  certificate_service.json  chassis.json  chassis_collection.json  drive.json  error.json  ethernet_interface.json  ethernet_interfaces_collection.json  manager.json  manager_collection.json  message_registry.json  message_registry_file.json  processor.json  processors_collection.json  registry_file_collection.json  root.json  secure_boot.json  simple_storage.json  simple_storage_collection.json  storage.json  storage_collection.json  system.json  system_collection.json  task.json  task_service.json  volume.json  (+5 more)
sushy_tools/static/: main.py
zuul.d/: legacy-sushy-tools-jobs.yaml  project.yaml  sushy-tools-jobs.yaml
(+69 files in other folders)
