[metadata]
name = sushy-tools
summary = A set of tools to support the development and test of the Sushy library (https://docs.openstack.org/sushy/)
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/sushy/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    sushy_tools

[entry_points]
console_scripts =
    sushy-emulator = sushy_tools.emulator.main:main
    sushy-static = sushy_tools.static.main:main

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = sushy_tools/locale
domain = sushy_tools

[update_catalog]
domain = sushy_tools
output_dir = sushy_tools/locale
input_file = sushy_tools/locale/sushy_tools.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = sushy_tools/locale/sushy_tools.pot
