[metadata]
name = sushy-tools
summary = A set of tools to support the development and test of the Sushy library (https://docs.openstack.org/sushy/)
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/sushy/latest/
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    sushy_tools

[entry_points]
console_scripts =
    sushy-emulator = sushy_tools.emulator.main:main
    sushy-static = sushy_tools.static.main:main
