[metadata]
name = sushy-tools
summary = A set of tools to support the development and test of the Sushy library (https://docs.openstack.org/sushy/)
description_file =
    README.rst
license = Apache-2.0
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/sushy/latest/
python_requires = >=3.9
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[files]
packages =
    sushy_tools

[entry_points]
console_scripts =
    sushy-emulator = sushy_tools.emulator.main:main
    sushy-static = sushy_tools.static.main:main

[codespell]
quiet-level = 4
# Words to ignore:
# hda: Hardware Device Address
# assertIn: Python's unittest method
ignore-words-list = hda,assertIn
